--- a/Inspirational Bytes/Views/Base.lproj/Main.storyboard
+++ b/Inspirational Bytes/Views/Base.lproj/Main.storyboard
@@ -126,24 +126,36 @@
                                 <rect key="frame" x="204" y="453" width="20" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </activityIndicatorView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M9A-4I-rRW">
-                                <rect key="frame" x="47" y="43" width="47" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="star.fill" catalog="system"/>
-                                <connections>
-                                    <action selector="saveToFav:" destination="kZ4-JR-CzS" eventType="touchUpInside" id="btO-cn-KZc"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VLo-vB-JrS">
-                                <rect key="frame" x="322" y="42" width="45" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="square.and.arrow.up" catalog="system"/>
-                                <connections>
-                                    <action selector="shareButton:" destination="kZ4-JR-CzS" eventType="touchUpInside" id="rzO-xy-Od3"/>
-                                </connections>
-                            </button>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Aot-dt-ofN">
+                                <rect key="frame" x="0.0" y="44" width="428" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem id="5bQ-kT-M8M">
+                                        <barButtonItem key="leftBarButtonItem" style="plain" id="sYZ-vs-1Vq">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="6mw-LL-YnK">
+                                                <rect key="frame" x="20" y="5" width="95" height="34.333333333333336"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="star.fill" catalog="system"/>
+                                                <connections>
+                                                    <action selector="saveToFav:" destination="kZ4-JR-CzS" eventType="touchUpInside" id="Esm-dQ-JIw"/>
+                                                </connections>
+                                            </button>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" style="plain" id="jhC-Zv-Wh3">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="ZBG-f3-07B">
+                                                <rect key="frame" x="313" y="5" width="95" height="34.333333333333336"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="square.and.arrow.up" catalog="system"/>
+                                                <connections>
+                                                    <action selector="shareButton:" destination="kZ4-JR-CzS" eventType="touchUpInside" id="b2g-n8-RLf"/>
+                                                </connections>
+                                            </button>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Hy1-ok-JbH"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -153,10 +165,10 @@
                         <outlet property="QOTDAuthorLabel" destination="FL4-IM-yAt" id="keH-6m-nSG"/>
                         <outlet property="QOTDLabel" destination="QrI-Wv-K3o" id="EVM-CD-nrV"/>
                         <outlet property="activityIndicator" destination="fNV-97-muC" id="haK-io-KRY"/>
-                        <outlet property="favButton" destination="M9A-4I-rRW" id="lUQ-uR-lSg"/>
+                        <outlet property="favButton" destination="sYZ-vs-1Vq" id="yb9-bO-6hJ"/>
                         <outlet property="getQuoteButton" destination="ssn-A4-kk8" id="RE2-rP-TcG"/>
                         <outlet property="imageView" destination="lwj-wV-ic4" id="g3b-om-yBE"/>
-                        <outlet property="shareButton" destination="VLo-vB-JrS" id="a7U-8S-Mdq"/>
+                        <outlet property="shareButton" destination="jhC-Zv-Wh3" id="tZH-mp-D7I"/>
                         <outlet property="view" destination="sb7-5N-2Q1" id="TZc-Az-cUb"/>
                     </connections>
                 </viewController>
