--- a/Inspirational Bytes/Views/Base.lproj/Main.storyboard
+++ b/Inspirational Bytes/Views/Base.lproj/Main.storyboard
@@ -91,7 +91,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background2forquotes" translatesAutoresizingMaskIntoConstraints="NO" id="lwj-wV-ic4">
-                                <rect key="frame" x="0.0" y="88" width="428" height="838"/>
+                                <rect key="frame" x="0.0" y="44" width="428" height="882"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FL4-IM-yAt" userLabel="QOTDAuthorLabel">
                                 <rect key="frame" x="20" y="632" width="388" height="70"/>
@@ -120,8 +120,9 @@
                                     <segue destination="rCL-Yq-dc4" kind="presentation" identifier="QOTDSegue" modalPresentationStyle="fullScreen" id="Clv-eI-eho"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="Quote Of The Day" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UME-P5-Y15">
+                            <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="Quote Of The Day" textAlignment="center" minimumFontSize="17" id="UME-P5-Y15">
                                 <rect key="frame" x="0.0" y="88" width="428" height="104"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="104" id="fYn-Fs-TMw"/>
                                 </constraints>
@@ -144,8 +145,9 @@
                                     <constraint firstAttribute="height" constant="20" id="gJI-a2-GCL"/>
                                 </constraints>
                             </activityIndicatorView>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Aot-dt-ofN">
+                            <navigationBar contentMode="scaleAspectFill" id="Aot-dt-ofN">
                                 <rect key="frame" x="0.0" y="44" width="428" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem id="5bQ-kT-M8M">
                                         <barButtonItem key="leftBarButtonItem" style="plain" id="sYZ-vs-1Vq">
@@ -182,9 +184,9 @@
                         <constraints>
                             <constraint firstItem="ssn-A4-kk8" firstAttribute="top" secondItem="eD7-Y1-ON6" secondAttribute="bottom" constant="8" id="2UB-Kc-JVW"/>
                             <constraint firstItem="lwj-wV-ic4" firstAttribute="trailing" secondItem="UME-P5-Y15" secondAttribute="trailing" id="46N-uD-8CN"/>
-                            <constraint firstItem="lwj-wV-ic4" firstAttribute="top" secondItem="Hy1-ok-JbH" secondAttribute="top" id="4DX-Vs-lrV"/>
+                            <constraint firstItem="lwj-wV-ic4" firstAttribute="top" secondItem="Hy1-ok-JbH" secondAttribute="top" constant="-44" id="4DX-Vs-lrV"/>
                             <constraint firstItem="eD7-Y1-ON6" firstAttribute="top" secondItem="FL4-IM-yAt" secondAttribute="bottom" constant="28" id="4Xy-n9-KxH"/>
-                            <constraint firstItem="UME-P5-Y15" firstAttribute="top" secondItem="lwj-wV-ic4" secondAttribute="top" id="DDN-ML-v3O"/>
+                            <constraint firstItem="UME-P5-Y15" firstAttribute="top" secondItem="lwj-wV-ic4" secondAttribute="top" constant="44" id="DDN-ML-v3O"/>
                             <constraint firstItem="FL4-IM-yAt" firstAttribute="trailing" secondItem="eD7-Y1-ON6" secondAttribute="trailing" id="E2S-xU-30o"/>
                             <constraint firstItem="fNV-97-muC" firstAttribute="leading" secondItem="Hy1-ok-JbH" secondAttribute="leading" constant="204" id="HzV-Ju-55Q"/>
                             <constraint firstAttribute="bottomMargin" secondItem="lwj-wV-ic4" secondAttribute="bottom" constant="-83" id="K6D-GP-0c8"/>
@@ -198,8 +200,9 @@
                             <constraint firstItem="QrI-Wv-K3o" firstAttribute="trailing" secondItem="FL4-IM-yAt" secondAttribute="trailing" id="bet-ha-B0N"/>
                             <constraint firstItem="QrI-Wv-K3o" firstAttribute="trailing" secondItem="sb7-5N-2Q1" secondAttribute="trailingMargin" id="doy-sR-L1o"/>
                             <constraint firstItem="lwj-wV-ic4" firstAttribute="leading" secondItem="UME-P5-Y15" secondAttribute="leading" id="gXR-Qn-LG0"/>
+                            <constraint firstItem="Aot-dt-ofN" firstAttribute="top" secondItem="lwj-wV-ic4" secondAttribute="top" id="jRo-UB-SDK"/>
                             <constraint firstItem="FL4-IM-yAt" firstAttribute="top" secondItem="QrI-Wv-K3o" secondAttribute="bottom" constant="8" id="pSO-Jh-x3a"/>
-                            <constraint firstItem="lwj-wV-ic4" firstAttribute="top" secondItem="Aot-dt-ofN" secondAttribute="bottom" id="qNV-cj-JVo"/>
+                            <constraint firstItem="lwj-wV-ic4" firstAttribute="top" secondItem="Aot-dt-ofN" secondAttribute="bottom" constant="-44" id="qNV-cj-JVo"/>
                             <constraint firstItem="UME-P5-Y15" firstAttribute="centerX" secondItem="fNV-97-muC" secondAttribute="centerX" id="r3V-4n-e51"/>
                             <constraint firstItem="FL4-IM-yAt" firstAttribute="leading" secondItem="eD7-Y1-ON6" secondAttribute="leading" id="sEP-bU-hum"/>
                             <constraint firstItem="fNV-97-muC" firstAttribute="centerX" secondItem="FL4-IM-yAt" secondAttribute="centerX" id="u8A-ue-6QZ"/>
@@ -252,16 +255,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BackgroundforQuote" translatesAutoresizingMaskIntoConstraints="NO" id="a6e-SG-WZA" customClass="imageView">
-                                <rect key="frame" x="0.0" y="78" width="428" height="847"/>
+                                <rect key="frame" x="0.0" y="35" width="428" height="890"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fP0-Vh-VB8" userLabel="QuoteLabel">
-                                <rect key="frame" x="20" y="79" width="388" height="503"/>
+                                <rect key="frame" x="20" y="581.66666666666663" width="388" height="0.0"/>
                                 <fontDescription key="fontDescription" name="BradleyHandITCTT-Bold" family="Bradley Hand" pointSize="40"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="aBf-yg-SWY">
-                                <rect key="frame" x="169" y="425" width="91" height="77"/>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="aBf-yg-SWY">
+                                <rect key="frame" x="169" y="424.66666666666669" width="90" height="77"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="77" id="lTf-Ru-vIE"/>
                                 </constraints>
@@ -275,11 +278,9 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZWi-k6-8af">
-                                <rect key="frame" x="0.0" y="35" width="428" height="43.666666666666657"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="43.666666666666657" id="s9D-sH-dDC"/>
-                                </constraints>
+                            <navigationBar contentMode="scaleAspectFill" id="ZWi-k6-8af">
+                                <rect key="frame" x="0.0" y="35" width="428" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem id="2dO-3h-Vvh">
                                         <nil key="title"/>
@@ -342,7 +343,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7YU-lq-L8n" userLabel="AuthorLabel">
-                                <rect key="frame" x="20" y="540" width="388" height="82"/>
+                                <rect key="frame" x="20" y="539.66666666666663" width="388" height="82"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="82" id="giV-IZ-icT"/>
                                 </constraints>
@@ -371,10 +372,10 @@
                             <constraint firstItem="fP0-Vh-VB8" firstAttribute="leading" secondItem="bdF-1o-AlV" secondAttribute="leadingMargin" id="YGS-23-29c"/>
                             <constraint firstItem="ZWi-k6-8af" firstAttribute="centerX" secondItem="aBf-yg-SWY" secondAttribute="centerX" id="Zca-7g-JYu"/>
                             <constraint firstItem="7YU-lq-L8n" firstAttribute="trailing" secondItem="UGW-5m-PyN" secondAttribute="trailing" id="fC5-v8-vWb"/>
-                            <constraint firstItem="ZWi-k6-8af" firstAttribute="top" secondItem="bdF-1o-AlV" secondAttribute="topMargin" constant="-9" id="haA-CA-XrT"/>
+                            <constraint firstItem="ZWi-k6-8af" firstAttribute="top" secondItem="bdF-1o-AlV" secondAttribute="topMargin" id="haA-CA-XrT"/>
                             <constraint firstItem="aBf-yg-SWY" firstAttribute="leading" secondItem="RA3-85-P17" secondAttribute="leading" constant="169" id="iRx-LX-mfh"/>
                             <constraint firstItem="7YU-lq-L8n" firstAttribute="top" secondItem="aBf-yg-SWY" secondAttribute="bottom" constant="38" id="kZ1-lV-K63"/>
-                            <constraint firstItem="a6e-SG-WZA" firstAttribute="top" secondItem="RA3-85-P17" secondAttribute="top" constant="34" id="uDJ-wH-MKl"/>
+                            <constraint firstItem="a6e-SG-WZA" firstAttribute="top" secondItem="RA3-85-P17" secondAttribute="top" constant="-9" id="uDJ-wH-MKl"/>
                             <constraint firstItem="fP0-Vh-VB8" firstAttribute="trailing" secondItem="bdF-1o-AlV" secondAttribute="trailingMargin" id="vq2-Yc-Yrk"/>
                             <constraint firstItem="UGW-5m-PyN" firstAttribute="leading" secondItem="f5K-kd-1tk" secondAttribute="leading" id="wfx-Sg-S40"/>
                         </constraints>
