--- a/Inspirational Bytes/Views/Base.lproj/Main.storyboard
+++ b/Inspirational Bytes/Views/Base.lproj/Main.storyboard
@@ -95,7 +95,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="ssn-A4-kk8">
-                                <rect key="frame" x="33" y="555" width="309" height="39"/>
+                                <rect key="frame" x="33" y="579" width="309" height="39"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Get Random Quotes"/>
@@ -104,16 +104,9 @@
                                     <segue destination="rCL-Yq-dc4" kind="presentation" identifier="QOTDSegue" modalPresentationStyle="fullScreen" id="Clv-eI-eho"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inspirational quotes provided by ZenQuotes API" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" id="eD7-Y1-ON6" userLabel="ZenQuoteLabel">
-                                <rect key="frame" x="34" y="524" width="309" height="27"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" id="QrI-Wv-K3o" userLabel="QOTDLabel">
-                                <rect key="frame" x="20" y="88" width="335" height="465"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <rect key="frame" x="20" y="147" width="335" height="298"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -159,6 +152,13 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inspirational quotes provided by ZenQuotes API" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" id="eD7-Y1-ON6" userLabel="ZenQuoteLabel">
+                                <rect key="frame" x="34" y="536" width="309" height="27"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="1qE-Qa-3l6"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -177,7 +177,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cDI-qP-tJG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="260.74766355140184" y="-72.570194384449252"/>
+            <point key="canvasLocation" x="260" y="-73.313343328335833"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Abg-dL-R3l">
@@ -212,12 +212,12 @@
                             </imageView>
                             <navigationBar contentMode="scaleAspectFill" id="ZWi-k6-8af">
                                 <rect key="frame" x="0.0" y="35" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem id="2dO-3h-Vvh">
                                         <nil key="title"/>
                                         <barButtonItem key="leftBarButtonItem" id="2ah-t5-CRs">
-                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" id="MHz-EN-cw3">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="MHz-EN-cw3">
                                                 <rect key="frame" x="16" y="0.0" width="164.5" height="44"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
@@ -262,22 +262,18 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UGW-5m-PyN">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UGW-5m-PyN">
                                 <rect key="frame" x="7" y="587" width="362" height="31"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Give Me Another"/>
                                 <connections>
                                     <action selector="NewQuoteButton:" destination="rCL-Yq-dc4" eventType="touchUpInside" id="mUT-XJ-EFH"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fP0-Vh-VB8" userLabel="QuoteLabel">
-                                <rect key="frame" x="7" y="106" width="362" height="346"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inspirational quotes provided by ZenQuotes API" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="f5K-kd-1tk" userLabel="ZenQuoteLabel">
-                                <rect key="frame" x="7" y="640" width="362" height="27"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inspirational quotes provided by ZenQuotes API" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" id="f5K-kd-1tk" userLabel="ZenQuoteLabel">
+                                <rect key="frame" x="7" y="620" width="362" height="27"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="27" id="ad4-k7-EYP"/>
                                 </constraints>
@@ -285,14 +281,20 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="aBf-yg-SWY">
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="aBf-yg-SWY">
                                 <rect key="frame" x="169.5" y="315" width="37" height="37"/>
+                                <autoresizingMask key="autoresizingMask"/>
                             </activityIndicatorView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7YU-lq-L8n" userLabel="AuthorLabel">
-                                <rect key="frame" x="16" y="460" width="343" height="82"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="82" id="Geh-Lf-QdR"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7YU-lq-L8n" userLabel="AuthorLabel">
+                                <rect key="frame" x="15" y="434" width="344" height="70"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fP0-Vh-VB8" userLabel="QuoteLabel">
+                                <rect key="frame" x="7" y="79" width="362" height="347"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -300,25 +302,6 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="RA3-85-P17"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="f5K-kd-1tk" firstAttribute="centerX" secondItem="ZWi-k6-8af" secondAttribute="centerX" id="4BZ-Oc-XEJ"/>
-                            <constraint firstItem="UGW-5m-PyN" firstAttribute="leading" secondItem="RA3-85-P17" secondAttribute="leading" constant="7" id="7g0-tf-2fu"/>
-                            <constraint firstItem="7YU-lq-L8n" firstAttribute="centerX" secondItem="a6e-SG-WZA" secondAttribute="centerX" id="D1i-mW-i9D"/>
-                            <constraint firstItem="7YU-lq-L8n" firstAttribute="centerX" secondItem="UGW-5m-PyN" secondAttribute="centerX" id="Efq-V8-PWP"/>
-                            <constraint firstItem="fP0-Vh-VB8" firstAttribute="trailing" secondItem="f5K-kd-1tk" secondAttribute="trailing" id="MHq-Ld-79k"/>
-                            <constraint firstItem="fP0-Vh-VB8" firstAttribute="top" secondItem="ZWi-k6-8af" secondAttribute="bottom" constant="27" id="MNY-ab-Q2E"/>
-                            <constraint firstItem="fP0-Vh-VB8" firstAttribute="leading" secondItem="f5K-kd-1tk" secondAttribute="leading" id="OQx-1h-eVe"/>
-                            <constraint firstItem="7YU-lq-L8n" firstAttribute="top" secondItem="fP0-Vh-VB8" secondAttribute="bottom" constant="8" symbolic="YES" id="QFI-al-whw"/>
-                            <constraint firstItem="RA3-85-P17" firstAttribute="trailing" secondItem="UGW-5m-PyN" secondAttribute="trailing" constant="6" id="Qlw-3R-sPd"/>
-                            <constraint firstAttribute="bottom" secondItem="7YU-lq-L8n" secondAttribute="bottom" constant="125" id="Uuj-8K-Wz5"/>
-                            <constraint firstItem="fP0-Vh-VB8" firstAttribute="trailing" secondItem="UGW-5m-PyN" secondAttribute="trailing" id="Vcs-Sr-qes"/>
-                            <constraint firstItem="aBf-yg-SWY" firstAttribute="centerY" secondItem="bdF-1o-AlV" secondAttribute="centerY" id="YCZ-Yb-KO7"/>
-                            <constraint firstItem="7YU-lq-L8n" firstAttribute="centerX" secondItem="aBf-yg-SWY" secondAttribute="centerX" id="cXe-iJ-ynV"/>
-                            <constraint firstItem="7YU-lq-L8n" firstAttribute="leading" secondItem="bdF-1o-AlV" secondAttribute="leadingMargin" id="ddF-Gg-TZR"/>
-                            <constraint firstItem="UGW-5m-PyN" firstAttribute="top" secondItem="7YU-lq-L8n" secondAttribute="bottom" constant="45" id="lzt-7a-x4S"/>
-                            <constraint firstItem="f5K-kd-1tk" firstAttribute="bottom" secondItem="a6e-SG-WZA" secondAttribute="bottom" id="qnb-G7-5Wg"/>
-                            <constraint firstItem="fP0-Vh-VB8" firstAttribute="leading" secondItem="UGW-5m-PyN" secondAttribute="leading" id="xFa-u1-btg"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="AuthorLabel" destination="7YU-lq-L8n" id="crG-tx-PO1"/>
@@ -337,7 +320,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="NZp-rF-x9Q"/>
+        <segue reference="Clv-eI-eho"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Background2forquotes" width="1284" height="2688"/>
